app/assets/stylesheets/modules/modal.css.scss
.modal-dialog,
.modal-content {
  /* 80% of window height */
  height: 80%;
}

.modal-body {
  /* 100% = dialog height, 120px = header + footer */
  max-height: calc(100% - 120px);
  overflow-y: scroll;

  ul {
    list-style: circle;
    padding: 0 30px;
  }
}

